--- a/vignettes/api.Rmd
+++ b/vignettes/api.Rmd
@@ -109,11 +109,9 @@ If you cannot install it because you are not running latest R, you can install t
 # install.packages("devtools") if devtools was not installed
 ## Install from github for development version  
 source("http://bioconductor.org/biocLite.R")
-## if useDevel() and biocLite("BiocUpgrade")doesn't work, run following code
-## useDevel()  
-## biocLite("BiocUpgrade")
+# install.packages("devtools") if devtools was not installed
 library(devtools)
-install_github("tengfei/sevenbridges", build_vignettes=TRUE, 
+install_github("sbg/sevenbridges-r", build_vignettes=TRUE, 
   repos=BiocInstaller::biocinstallRepos(),
   dependencies=TRUE)
 ```
@@ -209,9 +207,15 @@ Billing information, every project is associated with a billing group
 ```{r}
 ## check your billing info
 a$billing()
-## check invoices
 a$invoice()
 ```
+
+For more information, use `breakdown = TRUE`
+
+```{r}
+a$billing(id = "your_billing_id", breakdown = TRUE)
+```
+
 
 ### Create a project
 
@@ -1226,10 +1230,34 @@ delete(tsklst)
 
 #### Download all files from a completed task
 
-```
+```{r}
 tsk$download("~/Downloads")
 ```
 
+#### Run task in bacth mode
+
+To run task in batch mode, (check `?batch`) for more details, here is an mock running
+
+```{r}
+## batch by items
+(tsk <- p$task_add(name = "RNA DE report new batch 2", 
+                   description = "RNA DE analysis report", 
+                   app = rna.app$id,
+                   batch = batch(input = "bamfiles"),
+                   inputs = list(bamfiles = bamfiles.in, 
+                                 design = design.in,
+                                 gtffile = gtf.in)))
+
+## batch by metadata, input files has to have metadata fields specified
+(tsk <- p$task_add(name = "RNA DE report new batch 3", 
+                   description = "RNA DE analysis report", 
+                   app = rna.app$id,
+                   batch = batch(input = "fastq", 
+                                 c("metadata.sample_id", "metadata.library_id")),
+                   inputs = list(bamfiles = bamfiles.in, 
+                                 design = design.in,
+                                 gtffile = gtf.in)))
+```
 
 ### Get Raw Response from httr
 
