--- a/vignettes/apps.Rmd
+++ b/vignettes/apps.Rmd
@@ -76,7 +76,7 @@ We also provide an enum type, when you specify the enum, please pass the require
 `type = enum("format", c("pdf", "html"))` then in the interface you will be poped with drop down when you execute the 
 task. 
 
-For complete example, please check the "Make the best of bioconductor workflow" tutorial, or if you are advanced user, you can simply check `inst/docker` folder or check the github example [here](https://github.com/tengfei/sevenbridges/tree/master/inst/docker/rnaseqGene)
+For complete example, please check the "Make the best of bioconductor workflow" tutorial, or if you are advanced user, you can simply check `inst/docker` folder or check the github example [here](https://github.com/sbg/sevenbridges-r/tree/master/inst/docker/rnaseqGene)
 
 
 
@@ -120,6 +120,10 @@ fd <- fileDef(name = "runif.R",
 .srcfile <- system.file("docker/sevenbridges/src/runif.R", package = "sevenbridges")
 fd <- fileDef(name = "runif.R",
               content = paste(readLines(.srcfile), collapse = "\n"))
+## or read via reader
+library(readr)
+fd <- fileDef(name = "runif.R",
+              content = read_file(.srcfile))
 
 rbx <- Tool(id = "runif", 
             label = "runif",
@@ -157,7 +161,8 @@ rbx <- Tool(id = "runif_twoscript",
 
 ```
 
-#### Create regular input/output interface
+
+#### Create formal input/output interface
 
 ```{r}
 ## pass a input list
@@ -238,6 +243,152 @@ rbx <- Tool(id = "runif",
 
 
 ```
+#### Quick command line interface with commandArgs (position and named args)
+
+For advanced users, please read another tutorial "Creating Your Docker Container and Command Line Interface (with docopt)", "docopt" is more formal way to construct your command line interface, but there is a quick way to make command line
+interface here using just `commandArgs`
+
+Suppose I already have a R script like this using position mapping the arguments
+
+1. numbers
+2. min
+3. max
+
+```{r, eval = TRUE, comment=''}
+fl <- system.file("docker/sevenbridges/src", "runif2spin.R", package = "sevenbridges")
+cat(readLines(fl), sep = '\n')
+```
+
+Ignore the comment part, I will introduce spin/stich later. My base command will be somethine like
+
+```
+Rscript runif2spin.R 10 30 50
+```
+
+I just describe my tool in this way
+
+```{r}
+library(readr)
+fd <- fileDef(name = "runif.R",
+              content = read_file(fl))
+
+rbx <- Tool(id = "runif", 
+            label = "runif",
+            hints = requirements(docker(pull = "rocker/r-base"), 
+                                 cpu(1), mem(2000)),
+            requirements = requirements(fd),
+            baseCommand = "Rscript runif.R",
+            stdout = "output.txt",
+            inputs = list(input(id = "number",
+                                type = "integer",
+                                position = 1),
+                          input(id = "min",
+                                type = "float",
+                                position = 2),
+                          input(id = "max",
+                                type = "float",
+                                position = 3)),
+            outputs = output(id = "random", glob = "output.txt"))   
+```
+
+Now copy-paste the json into your project app and run it in the cloud to test it
+
+How about named argumentments? I will still recommend use "docopt" package, but for simple
+way.
+
+```{r, eval = TRUE, comment=''}
+fl <- system.file("docker/sevenbridges/src", "runif_args.R", package = "sevenbridges")
+cat(readLines(fl), sep = '\n')
+```
+
+
+```
+Rscript runif_args.R --n=10 --min=30 --max=50
+```
+I just describe my tool in this way, note, I use `separate=FALSE` and add `=` to my prefix
+as a hack.
+
+```{r}
+library(readr)
+fd <- fileDef(name = "runif.R",
+              content = read_file(fl))
+
+rbx <- Tool(id = "runif", 
+            label = "runif",
+            hints = requirements(docker(pull = "rocker/r-base"), 
+                                 cpu(1), mem(2000)),
+            requirements = requirements(fd),
+            baseCommand = "Rscript runif.R",
+            stdout = "output.txt",
+            inputs = list(input(id = "number",
+                                type = "integer",
+                                separate = FALSE,
+                                prefix = "--n="),
+                          input(id = "min",
+                                type = "float",
+                                separate = FALSE,
+                                prefix = "--min="),
+                          input(id = "max",
+                                type = "float",
+                                 separate = FALSE,
+                                prefix = "--max=")),
+            outputs = output(id = "random", glob = "output.txt"))   
+
+```
+
+
+
+#### Quick report: Spin and Stich
+
+Alternative, you can use spin/stich from knitr to generate report directly from a 
+Rscript with special format. For example, let's use above example
+
+
+
+```{r, eval = TRUE, comment=''}
+fl <- system.file("docker/sevenbridges/src", "runif_args.R", package = "sevenbridges")
+cat(readLines(fl), sep = '\n')
+```
+
+You command is something like this
+
+```
+Rscript -e "rmarkdown::render(knitr::spin('runif_args.R', FALSE))" --args --n=100 --min=30 --max=50
+```
+
+And so I describe my tool like this with docker image `rocker/hadleyverse` this contians knitr and rmarkdown package.
+
+```{r}
+library(readr)
+fd <- fileDef(name = "runif.R",
+              content = read_file(fl))
+
+rbx <- Tool(id = "runif", 
+            label = "runif",
+            hints = requirements(docker(pull = "rocker/hadleyverse"), 
+                                 cpu(1), mem(2000)),
+            requirements = requirements(fd),
+            baseCommand = "Rscript -e \"rmarkdown::render(knitr::spin('runif.R', FALSE))\" --args",
+            stdout = "output.txt",
+            inputs = list(input(id = "number",
+                                type = "integer",
+                                 separate = FALSE,
+                                prefix = "--n="),
+                          input(id = "min",
+                                type = "float",
+                                 separate = FALSE,
+                                prefix = "--min="),
+                          input(id = "max",
+                                type = "float",
+                                 separate = FALSE,
+                                prefix = "--max=")),
+            outputs = list(output(id = "stdout", type = "file", glob = "output.txt"),
+                           output(id = "random", type = "file", glob = "*.csv"),
+                           output(id = "report", type = "file", glob = "*.html")))
+```
+
+
+You will get a report in the end
 
 #### Inherit metadata and additional metadata
 
@@ -284,6 +435,61 @@ tsk$run()
 tsk$download("~/Downloads/")
 ```
 
+#### Execute the tool in Rabix - test locally
+
+**1. from CLI**  
+While developing tools it is useful to test them locally first. For that we can use rabix -  reproducible analyses for bioinformatics, https://github.com/rabix. To test your tool with latest implementation of rabix in Java (called **bunny**) you could use docker image **tengfei/testenv**:
+
+```
+docker pull tengfei/testenv
+```
+
+Dump your rabix tool as json into dir which also contains input data. `write(rbx$toJSON, file="<data_dir>/<tool>.json")`. Make **inputs.json** file to declare input parameters in the same directory (you can use relative paths from inputs.json to data). Create container:
+
+```
+docker run --privileged --name bunny -v </path/to/data_dir>:/bunny_data -dit tengfei/testenv
+```
+
+Execute tool
+
+```
+docker exec bunny bash -c 'cd /opt/bunny && ./rabix.sh -e /bunny_data /bunny_data/<tool>.json /bunny_data/inputs.json'
+```
+
+You'll see running logs from within container, and also output dir inside <data_dir> in home system.
+
+NOTE: tengfei/testenv has R, python, Java... so many tools can work without docker requirement set. If you however set docker requirement you need to pull image inside container first to run docker container inside running bunny docker.  
+NOTE: inputs.json can also be inputs.yaml if you find it easier to declare inputs in YAML.
+
+**2. from R**  
+```{r, eval=F}
+library(sevenbridges)
+
+in.df <- data.frame(id = c("number", "min", "max", "seed"),
+                    description = c("number of observation", 
+                                    "lower limits of the distribution",
+                                    "upper limits of the distribution",
+                                    "seed with set.seed"),
+                    type = c("integer", "float", "float", "float"),
+                    label = c("number" ,"min", "max", "seed"), 
+                    prefix = c("--n", "--min", "--max", "--seed"),
+                    default = c(1, 0, 10, 123), 
+                    required = c(TRUE, FALSE, FALSE, FALSE))
+out.df <- data.frame(id = c("random", "report"),
+                     type = c("file", "file"),
+                     glob = c("*.txt", "*.html"))
+rbx <- Tool(id = "runif",
+            label = "Random number generator",
+            hints = requirements(docker(pull = "tengfei/runif"), 
+                                 cpu(1), mem(2000)),
+            baseCommand = "runif.R",
+            inputs = in.df, ## or ins.df
+            outputs = out.df)
+params <- list(number=3, max=5)
+
+set_test_env("tengfei/testenv", "mount_dir")
+test_tool(rbx, params)
+```
 
 ## Describe Wokrflow in R
 
