--- a/vignettes/api.Rmd
+++ b/vignettes/api.Rmd
@@ -96,14 +96,35 @@ biocLite("sevenbridges")
 
 Our API keep improving, please also visit our [github homepage](https://github.com/sbg/sevenbridges-r) for most recent news and for latest version.  
 
-```{r}
-# install.packages("devtools") if devtools was not installed
+__If you don't have devtools__
+
+This require you have `devtools` package, install it from CRAN if you don't have it
+
+```r
+install.packages("devtools") 
+```
+
+You may got an error and need system dependecies sometimes for curl and ssl, for example, in ubuntu you probably need to do this first in order to install `devtools` and in order to build vigenttes (you need pandoc)
+
+```
+apt-get update
+apt-get install libcurl4-gnutls-dev libssl-dev pandoc pandoc-citeproc
+```
+
+__If devtools is already installed__
+
+Now install latest version from github for `sevenbridges`
+
+```r
 source("http://bioconductor.org/biocLite.R")
+biocLite(c("readr", "BiocStyle"))
 library(devtools)
 install_github("sbg/sevenbridges-r", build_vignettes=TRUE, 
   repos=BiocInstaller::biocinstallRepos(),
   dependencies=TRUE)
 ```
+
+If you have trouble with pandoc and don't want to install pandoc,  set `build_vignettes = FALSE` to avoid vignettes build.
 
 
 ## Quickstart
@@ -116,30 +137,44 @@ Everything starts from an `Auth` object, so let's set up the `Auth` object, it r
 
 You have three different ways to setup the token. 
 
-1. Direct setup via `Auth` function, explicityly setup token and url. 
+1. Direct setup via `Auth` function, explicityly setup your token and API url. 
 2. Configuration file in your home folder ".sbg.auth.yml", very easy to manage and implicitly loaded, everytime you start a 
 new R session.
 3. Tempoerary setup via option in R session
 
 Load the library first
 
-```{r, eval = TRUE}
+```{r, eval = TRUE, message = FALSE}
 library(sevenbridges)
 ```
 
+This is most common way to construct your Auth object
+
 ```{r}
 ## direct setup
-a <- Auth(token = "<fake_token>",
-          url = "https://cgc-api.sbgenomics.com/v2/")
+(a <- Auth(token = "<fake_token>",
+          url = "https://cgc-api.sbgenomics.com/v2/"))
 ## or load default from config file (autoloaded into options)
-library(sevenbridges)
-a <- Auth(platform = "us", username = "tengfei")
+
 ```
 
 ```
 == Auth ==
 token : <fake_token>
 url : https://cgc-api.sbgenomics.com/v2/
+```
+
+Or loaded from your configuration file
+
+```{r}
+## from platfrom "us" for user "tengfei"
+a <- Auth(platform = "us", username = "tengfei")
+```
+
+or update Auth object from another config file
+
+```{r}
+updateAuthList("new_config.yml")
 ```
 
 ### Infomation about a user
@@ -220,33 +255,88 @@ type : v2
 -- Permission --
 ```
 
+### Get exisitng project
+
+```{r}
+## list first 100 
+a$project()
+## list all
+a$project(complete = TRUE)
+## return all named match "demo"
+a$project(name = "demo", complete = TRUE)
+## get the project you want by id
+p = a$project(id = "tengfei/api-tutorial")
+```
+
+### Copy public app into your project
+
+To find out avaialbe public apps, you can 
+
+- Browse them online, check out the [tutorial](http://docs.cancergenomicscloud.org/docs/) for "Find apps" section.
+- You can simply use this package to find it, see following examples. 
+
+```{r}
+## search by name matching, complete = TRUE search all apps, not 
+## limited by offset or limit.
+a$public_app(name = "STAR", complete = TRUE)
+## search by id is accurate
+a$public_app(id = "admin/sbg-public-data/rna-seq-alignment-star/5")
+## you can also get everything 
+a$public_app(complete = TRUE)
+## default limit = 100, offset = 0 which means first 100
+a$public_app()
+```
+
+Now, from your `Auth` object, you copy an App `id` into your `project` id with a new `name`, following this logic.  
+
+```{r}
+## copy
+a$copy_app(id = "admin/sbg-public-data/rna-seq-alignment-star/5", 
+           project = "tengfei/api-testing", name = "new copy of star")
+## check its' copyed
+p = a$project(id = "tengfei/api-testing")
+## list apps your got in your project
+p$app()
+```
+
+The short name is changed to "newcopyofstar"
+
+```
+== App ==
+id : tengfei/api-testing/newcopyofstar/0
+name : RNA-seq Alignment - STAR
+project : tengfei/api-testing-2
+revision : 0
+```
+
+Alternatively you can copy from app object
+
+```{r}
+app = a$public_app(id = "admin/sbg-public-data/rna-seq-alignment-star")
+app$copy_to(project = "tengfei/api-testing", 
+            name = "copy of star")
+```
+
+
+
+
 ### Import CWL app and run a task
-Then we want to run a task, and you want to upload your json file that describe your tool, here we use an random number generator example saved in this package. 
+
+You can also upload your own CWL json file that describe your app to your project.
 
 Note: alternatively you can directly describe your CWL tool in R with this package, please read another vignettes on "Describe CWL Tools/Workflows in R and Execution"
 
-```{r, eval = TRUE}
-## Add an CWL file to your project
-fl.runif <- system.file("docker", "sevenbridges/rabix/runif.json", package = "sevenbridges")
-```
-
-Let's take a look at the content of this json file
-
-```{r comment='', eval = TRUE}
-cat(readLines(fl.runif), sep = '\n')
-```
-
-Now let's add this json file to your projct as a new app.
-
 ```{r}
-## name your app 
-(aid <- p$app_add("runif", fl.runif)$id)
+## Add an CWL file to your project
+f.star = system.file("extdata/app", "flow_star.json", package = "sevenbridges")
+app = p$app_add("starlocal", fl.runif)
+(aid <- app$id)
 ```
 
-You get an id like this
+You get an app id like this
 
 ```
-"tengfei/api-testing/runif/0"
+"tengfei/api-testing/starlocal/0"
 ```
 
 It's composed of 
@@ -256,7 +346,7 @@ It's composed of
 3. __revision__ : 0
 
 
-Alternatively, you can describe tools like this
+Alternatively, you can describe tools in R directly, you can learn this later, feel free to go to next section
 
 ```{r comment='', eval = TRUE}
 fl <- system.file("docker", "sevenbridges/rabix/generator.R", package = "sevenbridges")
@@ -267,114 +357,174 @@ And add it like this
 
 ```{r}
 ## rbx is the object returned by Tool function
-(aid <- p$app_add("runif", rbx)$id)
+app = p$app_add("runif", rbx)
+(aid <- app$id)
 ```
 
 Please read another tutorial about how to describe tools and flows in R. 
 
 ### Excute a new task
 
-Now we draft a new task, you need to specify
+#### Understand your app input 
+
+Now assume you already copied the public app "admin/sbg-public-data/rna-seq-alignment-star/5" into your project "tengfei/api-testing" , the app id in your current project is "tengfei/api-testing/newcopyofstar" Or if you already have an app to run in your project. 
+
+To draft a new task, you need to specify
 
 - name of the task
 - description
 - app id
 - inputs of your task: you need to know about the app you are running, in this case, the cwl app accept 4 parameters (number, min, max, seed). 
 
+You can always go to the UI to check App details or task input requirements, but how to do it in R?
 
-I want to generate 1 random number (default) between 1 and 10. 
+To check your inputs name and types you need to get an `App` object first. 
 
 ```{r}
-(tsk <- p$task_add(name = "randome number 5", 
-           description = "Generate some random number", 
-           app = aid,
-           inputs = list(min = 1, max = 10, number = 1, seed = 4)))
-
-## confirm, show all task status is draft
-p$task(status = "draft")
-
-## or just list the task
-tsk$update()
+app = a$app(id = "tengfei/api-testing-2/newcopyofstar")
+## get input matrix
+app$input_matrix()
+app$input_matrix(c("id", "label", "type"))
+app$input_matrix(c("id", "label", "type"), required = TRUE)
+## get required input names and types only
+app$get_required()
 ```
 
-### More on task inputs requirements
+Or loaded from a CWL JSON and convert it into a R object first. 
 
-Task inputs need to match the expected data type
+```{r, eval = TRUE}
+f1 = system.file("extdata/app", "flow_star.json", package = "sevenbridges")
+app = convert_app(f1)
+## get input matrix
+app$input_matrix()
+app$input_matrix(c("id", "label", "type"))
+app$input_matrix(c("id", "label", "type"), required = TRUE)
+## get required input names and types only
+app$get_required()
+```
 
-- number, character or integer, you can directly pass to input parameters
+For what it returned, the names is the one you want to use as your task input list. Task inputs need to match the expected data type and name, requried has to be provided. In above example, we see two required field
+
+- fastq: File array as indicated by "File..."
+- genomeFastaFiles: single file as indicated by "File"
+
+We also want to provide gene feature file
+
+- sjdbGTFfile: single file as indicated by "File"
+
+Note some other input types includes:
+
+- number, character or integer, you can directly pass to input parameters as it is.
 - an Enum type, just pass the value to the input parameter
-- File, you have to pay attention to this. Some parameters accept only single file
-as input while other input takes more than one files (File arrays or FilesList). This input require you to pass a `Files` object (for sinlge file input) or `FilesList` object (for input accept more than one files), to make it conventient for you, you can pass a simple `list` of `Files` object as well as the following examples
+- File, you have to pay attention to this. Some parameters accept only single file type 'File' as input while other input takes more than one files (File arrays or FilesList or 'File...' ). This input require you to pass a `Files` object (for sinlge file input) or `FilesList` object (for input accept more than one files) or simply a list of "Files" object. Get your file by `id` or by `name` with `exact = TRUE` is always accurate. Sounds complicated let's just see an example.
 
-It's always recommended to get file by id, because it's unique, if you are searching files
-by names, it sometimes return more than one object, make sure it's what you want 
+#### Get your input files ready
 
 ```{r}
-bamfiles.in = p$file(".bam")  ## return more than one files
-## alternatively you can do 
-bam1 = p$file(id = "some_id1")
-bam2 = p$file(id = "some_id2")
-bamfiles.in = list(bam1, bam2)
+fastqs <- c("SRR1039508_1.fastq", "SRR1039508_2.fastq")
 
+## get all 2 exact files
+fastq_in = p$file(name= fastqs, exact = TRUE) 
 
-design.in = p$file("sample_table.csv") # matching by name
-gtf.in = p$file("Homo_sapiens.GRCh37.75_subset.gtf") # matching by name
-
-## add a new Task
-tsk = p$task_add(name = "RNA DE report new", 
-                   description = "RNA DE analysis report", 
-                   app = rna.app$id,
-                   inputs = list(bamfiles = bamfiles.in, 
-                                 design = design.in,
-                                 gtffile = gtf.in))
-
+## get single file
+fasta_in = p$file(name = "Homo_sapiens.GRCh38.dna.primary_assembly.fa", 
+                  exact = TRUE)
+## get all single file
+gtf_in = p$file(name = "Homo_sapiens.GRCh38.84.gtf", 
+                exact = TRUE)
 
 ```
 
-Note: if you have two files named "a.bam" and "a2.bam", if you are calling `p$file("a")` 
-this will return you two object you can use id which is more accurate or you can  call
+#### Draft a new task
+
 
 ```{r}
-p$file("a$")
-## or
-p$file("a", exact = TRUE)
+## Add new tasks
+taskName = paste0("tengfei_star-alignment ",date())
+
+tsk = p$task_add(name = taskName,
+           description = "star test", 
+           app = "tengfei/api-testing-2/newcopyofstar/0",
+           inputs = list(sjdbGTFfile = gtf_in,
+                         fastq = fastq_in,
+                         genomeFastaFiles = fasta_in))
 ```
 
-To check your inputs name and types you need to get an `App` object first, then you 
-get raw cwl information and list them by calling `input_type`. Type `File` means single File only, type `File...` means accept more than one file. We are trying to be smart on 
-this, when a parameter accept single file only, if you passed a list, but it has only has one item, we will do the conversion automatically for you; If it require a list, but you pass a single object, it will automatically wrap it into a list. If the 'smart' conversion fails, you may get task warning to ask you fix your input. 
+Remember "fastq" expect a list of files. You can also do something like
 
 ```{r}
-x = a$app(id = "your_app_id")
-x$cwl() # to get raw info first by api
-x$input_type() # return input name and types, pay attention to File and Files...
+f1 = p$file(name = "SRR1039508_1.fastq", exact = TRUE)
+f2 = p$file(name = "SRR1039508_2.fastq", exact = TRUE)
+## get all 2 exact files
+fastq_in = list(f1, f2) 
+
+## or if you know you only have 2 file name matching SRR924146*.fastq
+fastq_in = p$file(name = "SRR1039508*.fastq", complete = TRUE)
 ```
+
+Using `complete = TRUE` when items is over 100. 
+
+#### Draft a batch task
+
+Now let's do a batch with 8 files in 4 group, which is batch by metadata sample_id and library_id, assume each file has these two metadata fields in the system. And it could be evenly grouped into 4. So we will have a single parent task with 4 sub tasks. 
+
+```{r}
+fastqs <- c("SRR1039508_1.fastq", "SRR1039508_2.fastq", "SRR1039509_1.fastq", 
+            "SRR1039509_2.fastq", "SRR1039512_1.fastq", "SRR1039512_2.fastq", 
+            "SRR1039513_1.fastq", "SRR1039513_2.fastq")
+
+## get all 8 files
+fastq_in = p$file(name= fastqs, exact = TRUE) 
+## can also try to returned all SRR*.fastq files
+## fastq_in = p$file(name= "SRR*.fastq", complete = TRUE) 
+
+tsk = p$task_add(name = taskName,
+           description = "Batch Star Test", 
+           app = "tengfei/api-testing-2/newcopyofstar/0",
+           batch = batch(input = "fastq", 
+                         criteria = c("metadata.sample_id","metadata.noexist_id")),
+           inputs = list(sjdbGTFfile = gtf_in,
+                         fastq = fastqs_in,
+                         genomeFastaFiles = fasta_in))
+
+```
+
+Now you have a draft batch task, please check it out in the UI. 
+
 
 ### Run a task
 
-Now you have your draft task, you can delete your draft task or update it.
+Now run it.
+
+```{r}
+## Run your task
+tsk$run()
+```
+
+Before you run it, you can delete your draft task or update it.
 
 ```{r}
 ## not run
 ## tsk$delete()
 ```
 
-I want 100 numbers instead, so let me update my draft task 
+After you run a task, you can abort it
+
+```{r}
+## Abort your task
+tsk$abort()
+```
+
+If you want to update your task then re-run. 
 
 ```{r}
 tsk$getInputs()
 ## missing number input, only update number
-tsk$update(inputs = list(number = 500, seed = 1))
+tsk$update(inputs = list(sjdbGTFfile = "some new file"))
 ## double check 
 tsk$getInputs()
 ```
 
-we just want to run it in the cloud!
-
-```{r}
-## Run your task
-tsk$run()
-```
 
 ### Task monitoring
 
@@ -392,13 +542,6 @@ By default it just show message when the task is completed.
 ```{r}
 ## Monitor your task (skip this part)
 ## tsk$monitor()
-```
-
-To about running task just  all
-
-```
-## not run
-## tsk$abort()
 ```
 
 To download all files from a completed tasks
@@ -771,34 +914,131 @@ To list all files belongs to a project simple use
 p <- a$project(id = "tengfei/demo-project")
 p$file()
 ```
-### Files and Metadata
+### Files and Metadata and Tags
 
 #### List all files
 
-This call returns a list of all files in a specified project that you can access. For each file, the call returns:
+A better way to list files in a project
 
-- Its ID
-- Its filename
+```{r}
+## first 100 files, default offset = 0, limit = 100
+p$file()
+## list all files
+p$file(complete = TRUE)
+```
 
-The project is specified as a query parameter in the call.
+
+Alternatively get files from Auth object. 
 
 ```{r}
 a$file(project = p$id)
-a$file("omni", project = p$id, detail = TRUE)
+a$file(name = "omni", project = p$id, detail = TRUE)
 ```
 
-However we recommend user use cascading way to list files. 
+
+#### Search and filter file(s) 
+
+##### Rule of thumb
+
+You can easily search by partial name, exact name, id for many items like project, apps, files. Fortunately, we have more powerred filters for files. User could serach by metadata, tags and original task id. 
+
+1. __First rule: understand the scope__: we know we have default `limit = 100` and `offset = 0` for first 100 items, unless you are using arguments `complete = TRUE`. Things are different when it comes to files, when you search with exact name (search by name with `exact = TRUE` on), metadata, or tags, it searches ALL files, you don't have to use `complete = TRUE` at all. Project id is required or you can simply calling from a Project object for file searching like examples shows.
+
+2. __Second rule: understand the operation__: is it AND or OR? You can read more docs [here](http://docs.sevenbridges.com/docs/list-files-primary-method). "When filtering on any resource, including the same field several times with different filtering criteria results in an implicit OR operation for that field and the different criteria.When filtering by different specified fields, an implicit AND is performed between those criteria." so which are different fields, metadata, origin.task, tags, those are different fields. __Note__ different metadata fields are treated as different fields as well, so it will be __AND__ operation for different metadata field. 
+
+So for a quick example, this examples gives me all files in project "tengfei/demo" that with metadata sample_id "Sample1" __OR__ "Sample2", __AND__ the library id has to be "EXAMPLE", __AND__ tags has either "hello" __OR__ "world".
 
 ```{r}
-p$file()
+p = a$project(id = "tengfei/demo")
+p$file(metadata = list(sample_id = "Sample1", 
+                       sample_id = "Sample2", 
+                       library_id = "EXAMPLE"), 
+       tag = c("hello", "world"))
 ```
 
-To get details about files, please use `detail = TRUE` in the call.
+##### Search by names and id
+
+There are two ways to return exact file you want, one is by `id` the other one is by exact `name`. 
+
+For advanced users: when using name with `exact = TRUE`, it directly use our public API call to match exact name and return the object with single query. When you turn off `exact`, it will grep all files or files defined with `limit` and `offset` first, then match by name which could be slow.
+
+To get file id, you can check the url at single file detail page or mouse hover the file to check browser link info in the bottom corner. 
 
 ```{r}
-## need to check
-p$file(detail = TRUE)
+## return single object id is "some_file_id"
+p$file(id = "some_file_id")
+## return single object named a.fastq
+p$file(name = "a.fastq", exact = TRUE)
+## public file search using Auth object
+a$public_file(name = "ucsc.hg19.fasta.fai", exact = TRUE)
+a$public_file(id = "578cf94a507c17681a3117e8")
 ```
+
+Get more than one objects, the arguments `id` and `name` both accept vectors, so you can pass more than one id or name to it. 
+
+
+```{r}
+## get two files
+p$file(name = c("test1.fastq", "test2.fastq"), exact = TRUE)
+## get two files from public files using shorhand
+a$public_file(name = c("ucsc.hg19.fasta.fai", "ucsc.hg19.fasta"), 
+              exact = TRUE)
+```
+
+If you don't use exact, it will assume it's pattern grep, so partically matching will count 
+
+```{r}
+## get matchd the pattern for searching first 100 files
+p$file(name = c("gz", "fastq"))
+## get all matched files from the project
+p$file(name = c("gz", "fastq"), complete = TRUE)
+## get all files matched ucsc
+a$public_file(name = "ucsc.hg19", complete = TRUE)
+```
+
+##### Search by metadata
+
+Still the same example, just make sure different metadata fields, they have __AND__ operation and the same metadata fields they have __OR__ operation. 
+
+So list all files in project "tengfei/demo", that has sampple_id "Sample1" __OR__ "Sample2"; __AND__ it must has another metadata field lirary_id set to "EXAMPLE".
+
+```{r}
+p = a$project(id = "tengfei/demo")
+p$file(metadata = list(sample_id = "Sample1", 
+                       sample_id = "Sample2", 
+                       library_id = "EXAMPLE")) 
+```
+
+
+
+
+##### Search by tags
+
+Tags are more flexible than metadata, you can use multiple tags filter and it's __OR__ operation. 
+
+This examples shows how to return all files with tag "s1" __OR__ "s2".
+
+```{r}
+p = a$project(id = "tengfei/demo")
+p$file(tag = c("s1", "s2")) 
+```
+
+##### Search by original task id
+
+You can also get all files from a task, there are two ways to do it
+you can started from "Task" object as you imagined. You can also use the filter crateria. 
+
+
+```{r}
+## list all outputs file from a task id
+a$task(id = "53020538-6936-422f-80de-02fa65ae4b39")$file()
+
+## OR
+p = a$project(id = "tengfei/demo")
+p$file(origin.task = "53020538-6936-422f-80de-02fa65ae4b39")
+```
+
+Pick your favourite way.
 
 #### Copy a file or group of files
 
@@ -928,27 +1168,6 @@ fls <- list.files(dir.ext, recursive = TRUE, full.names = TRUE)
 p$upload(fls, overwrite = TRUE)
 p$upload("~/Documents/Data/sbgtest/1000G_phase1.snps.high_confidence.b37.vcf")
 ```
-#### Files filter from a task
-
-You can also get all files from a task, or by a metadata filter. 
-
-
-```{r}
-## list all outputs file from a task id
-a$task(id = "53020538-6936-422f-80de-02fa65ae4b39")$file()
-
-## alternative way to list files under specific project
-a$file(project = "tengfei/re",
-       origin.task = "53020538-6936-422f-80de-02fa65ae4b39")
-
-
-## you can filter by metadata as well
-a$file(project = "tengfei/re", 
-       origin.task = "53020538-6936-422f-80de-02fa65ae4b39", 
-       metadata = list(experimental_strategy = "RNA-Seq"))
-```
-
-
 
 
 
@@ -1009,19 +1228,19 @@ fl$metadata
 
 Although CGC defined a set of meta schema, which is visible on the UI of the platform, but you can pass any free form of meta for the file, it's just not visible on UI, but it's stored with the data. 
 
-Only the value being specified stored with files, to set metadata please call `setMeta()` from
+Only the value being specified stored with files, to set metadata please call `set_meta()` from
 Files object. 
 
 __Important__:
 
-- By default, we are not overwriting the meta field using `setMeta` call, unless you pass
+- By default, we are not overwriting the meta field using `set_meta` call, unless you pass
 the `overwrite = TRUE` argument
 
 ```{r}
-fl$setMeta(new_item3 = "item3")
+fl$set_meta(new_item3 = "item3")
 fl
 ## oops it removed rest of the meta
-fl$setMeta(new_item4 = "item4", overwrite = TRUE)
+fl$set_meta(new_item4 = "item4", overwrite = TRUE)
 fl
 ```
 
@@ -1044,6 +1263,53 @@ Metadata(platform  = "Affymetrix SNP Array 6.0",
          quality_scale = "sanger",
          new_item = "new test")
 ```
+
+#### Tag for file(s)
+
+
+Tags are different from metadata, it's more convenient and flexible and visible from file list UI on the platform. 
+
+To add a new tag using `obj$add_tag()` method for `File` object with a single tag string or a list/vector of tags. To complete rewrite the tags for file, use `obj$set_tag()` method, by default the argument `overwrite = TRUE` which means swipe and reset, when it's set to `FALSE`, it is basically `add_tag` call. You can also filter files by tags. 
+
+Let's get a file called "sample.bam" and play with it's tag.
+
+```{r}
+p <- a$project(id = "tengfei/s3tutorial")
+fl = p$file("sample.bam", exact = TRUE)
+## show tags for single file
+fl$tag()
+## add new tags
+fl$add_tag("new tag")
+## equavilent to 
+fl$set_tag("new tag 2", overwrite = FALSE)
+## set tags to overwrite existing
+x = list("this", "is", 1234)
+fl$set_tag(x)
+## filter by tags
+p$file(tag = c("1234", "new"))
+p$file(tag = list("1234", "new"))
+p$file(tag = "1234")
+```
+
+We also provide convenient methods for `FilesList`, let's add tag "s1" to a group files matched "Sample1" and add tag "s2" to a group of files that matched "s2", then try to get files by tag filter. 
+
+```{r}
+## work on a group of files
+## add tag "s2" to a group of files named with "Sample2" in it
+fl2 = p$file("Sample2")
+add_tag(fl2, "s2")
+## add tag "s2" to a group of files named with "Sample1" in it
+fl1 = p$file("Sample1")
+add_tag(fl1, "s1")
+## filter by tag s1 or s2
+p$file(tag = "s1")
+p$file(tag = "s2")
+## get files tagged with s2 and 1234
+p$file(tag = list("s2", "s1"))
+```
+
+
+How to do that on the UI, please check out the tutorial  [here](http://docs.sevenbridges.com/v1.0/docs/tag-your-files)
 
 ### App
 
@@ -1116,11 +1382,20 @@ Need two arguments
 - name: optional, to re-name your app
 
 ```{r}
-aid <- a$app(visibility = "public")[[1]]$id
-a$copyApp(aid, project = pid, name = "copy-rename-test")
+aid <- a$public_app()[[1]]$id
+a$copy_app(aid, project = pid, name = "copy-rename-test")
 ## check it is copied
 a$app(project = pid)
 ```
+
+Or you can copy directly from an app object
+
+```{r}
+app = a$public_app(id = "admin/sbg-public-data/rna-seq-alignment-star")
+app$copy_to(project = "tengfei/api-testing", 
+            name = "copy of star")
+```
+
 
 #### Get CWL from an App
 
@@ -1182,9 +1457,26 @@ a$project("demo")$task()
 
 ## alternatively
 pid <- a$project("demo")$id
-pid
 a$task(project = pid)
 ```
+
+To list all tasks with details just pass `detail = TRUE`. 
+
+```{r}
+p$task(id = "your task id here", detail = TRUE)
+p$task(detail = TRUE)
+```
+
+To list a batch task using `parent` parameter, pass the batch parent task id. 
+
+```{r}
+p = a$project(id = "tengfei/demo")
+p$task(id = "2e1ebed1-c53e-4373-870d-4732acacbbbb")
+p$task(parent = "2e1ebed1-c53e-4373-870d-4732acacbbbb")
+p$task(parent = "2e1ebed1-c53e-4373-870d-4732acacbbbb", status = "completed")
+p$task(parent = "2e1ebed1-c53e-4373-870d-4732acacbbbb", status = "draft")
+```
+
 
 #### Create a draft task
 
