--- a/inst/docker/sevenbridges/report/report.Rmd
+++ b/inst/docker/sevenbridges/report/report.Rmd
@@ -1,13 +1,10 @@
 ---
 title: "Uniform randome number generator example"
 output:
-  BiocStyle::html_document:
+  rmarkdown::html_document:
     toc: true
     number_sections: true
-    highlight: haddock
     css: style.css
-    includes:
-      in_header: logo.md
 params:
   seed: 1
   n: 1
@@ -15,17 +12,12 @@ params:
   max: 1
 ---
 
-```{r style, echo = FALSE, results = 'asis'}
-BiocStyle::markdown(css.files = "custom.css")
-```
-
-
 ## Summary
 ```{r}
 set.seed(params$seed)
-r <- runif(n = as.integer(params$n), 
-           min = as.numeric(params$min), 
-           max = as.numeric(params$max))
+r = runif(n   = as.integer(params$n), 
+          min = as.numeric(params$min), 
+          max = as.numeric(params$max))
 summary(r)
 hist(r)
 ```
