--- a/inst/liftr/runif.Rmd
+++ b/inst/liftr/runif.Rmd
@@ -1,13 +1,10 @@
 ---
 title: "Uniform random number generator example"
 output:
-  BiocStyle::html_document:
+  rmarkdown::html_document:
     toc: true
     number_sections: true
-    highlight: haddock
     css: style.css
-    includes:
-      in_header: logo.md
 liftr:
   maintainer: "Tengfei Yin"
   maintainer_email: "yintengfei@gmail.com"
@@ -52,17 +49,12 @@ rabix:
       default: 1
 ---
 
-```{r style, echo = FALSE, results = 'asis'}
-BiocStyle::markdown(css.files = "custom.css")
-```
-
-
 ## Summary
 ```{r}
 set.seed(params$seed)
-r <- runif(n = as.integer(params$n), 
-           min = as.numeric(params$min), 
-           max = as.numeric(params$max))
+r = runif(n   = as.integer(params$n), 
+          min = as.numeric(params$min), 
+          max = as.numeric(params$max))
 summary(r)
 hist(r)
 ```
