--- a/vignettes/docker.Rmd
+++ b/vignettes/docker.Rmd
@@ -1,25 +1,16 @@
 ---
-title: "Creating Your Docker Container and Command Line Interface (with docopt) "
+title: "Creating Your Docker Container and Command Line Interface (with docopt)"
 output:
-  BiocStyle::html_document:
+  rmarkdown::html_vignette:
     toc: true
     toc_depth: 4
     number_sections: false
-    highlight: haddock
-    css: style.css
+vignette: >
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteIndexEntry{Creating Your Docker Container and Command Line Interface (with docopt)}
 ---
 
-
-
-<!--
-%\VignetteIndexEntry{Creating Your Docker Container and Command Line Interface (with docopt) }
-%\VignettePackage{sevenbridges}
-%\VignetteEngine{knitr::rmarkdown}
--->
-
-
 ```{r include=FALSE}
-library(BiocStyle)
 knitr::opts_chunk$set(eval = TRUE)
 ```
 
@@ -40,18 +31,16 @@ base image for your container as your tool chain may save your lots of time late
 
 #### Rocker Project
 
-Official R Docker images is called "Rocker"" project and is on [github](https://github.com/rocker-org/rocker), please visit the 
-page to find more details and Dockerfile.
+Official R Docker images is called "Rocker"" project and is on [GitHub](https://github.com/rocker-org/rocker), please visit the page to find more details and Dockerfile.
 
-| Image         | Description          | 
+| Image         | Description   | 
 | ------------- |:-------------:|
-| rocker/r-base     | base package to build from| 
-| rocker/r-devel     | base plus R-devel from SVN |  
-| rocker/rstudio | base plus RStudio Server  |    
-| rocker/hadleyverse | rstudio + Hadley's packages, LaTeX |
-| rocker/ropensci | hadleyverse + rOpenSci packages |
-| rocker/r-devel-san | base, SVN's R-devel and SAN |
-
+| `rocker/r-base`      | base package to build from         | 
+| `rocker/r-devel`     | base plus R-devel from SVN         |  
+| `rocker/rstudio`     | base plus RStudio Server           |    
+| `rocker/hadleyverse` | rstudio + Hadley's packages, LaTeX |
+| `rocker/ropensci`    | hadleyverse + rOpenSci packages    |
+| `rocker/r-devel-san` | base, SVN's R-devel and SAN        |
 
 #### Bioconductor Images
 
@@ -102,16 +91,17 @@ Example Seven Bridges registry:
 ## Tutorial: random number generator 
 
 Our goal here is to making a cwl app to generate unif random numbers, yes, the core
-function is `runif()`, it's native function in R. 
+function is `runif()`, it's a native function in R. 
 
 ```{r}
 runif
+set.seed(1001)
 runif(10)
 ```
 
 ### Using docopt package
 
-In R, we also have a nice implementation in a package called `docopt`, developed by *Edwin de Jonge*. Check out its [tutorial](https://github.com/docopt/docopt.R) on github.
+In R, we also have a nice implementation in a package called `docopt`, developed by *Edwin de Jonge*. Check out its [tutorial](https://github.com/docopt/docopt.R) on GitHub.
 
 So let's quickly create a command line interface for our R scripts with a dummy example. Let's turn the uniform distribution function `runif` into a command line tool.
 
@@ -124,16 +114,16 @@ runif(n, min = 0, max = 1)
 
 Arguments
 
-n	
+n    
 number of observations. If length(n) > 1, the length is taken to be the number required.
 
-min, max	
+min, max    
 lower and upper limits of the distribution. Must be finite.
 ```
 
 I will add one more parameter to set seed, here is the R script file called `runif.R`. 
 
-At the beginning of the commadn line script, I use docopt standard to write my tool help. 
+At the beginning of the commadn line script, I use the docopt standard to write my tool help. 
 
 ```{r}
 'usage: runif.R [--n=<int> --min=<float> --max=<float> --seed=<float>]
@@ -144,8 +134,7 @@ options:
  --max=<float>   upper limits of the distribution. Must be finite [default: 1].
  --seed=<float>  seed for set.seed() function [default: 1]' -> doc
 
-library(docopt)
-
+library("docopt")
 ```
 
 Let's first do some testing in your R session before you make it a full functional command line tool.
@@ -177,7 +166,7 @@ options:
  --max=<float>   upper limits of the distribution. Must be finite [default: 1].
  --seed=<float>  seed for set.seed() function [default: 1]' -> doc
 
-library(docopt)
+library("docopt")
 opts <- docopt(doc)
 set.seed(opts$seed)
 runif(n = as.integer(opts$n), 
@@ -209,7 +198,7 @@ Loading required package: methods
  [8] 89.349485 55.592066 46.204859
 ```
 
-For full example you can check my github [example](https://github.com/tengfei/docker/tree/master/runif)
+For full example you can check my GitHub [example](https://github.com/tengfei/docker/tree/master/runif)
 
 ### Quick command line interface with commandArgs (position and named args)
 
@@ -236,8 +225,8 @@ Rscript runif2spin.R 10 30 50
 I just describe my tool in this way
 
 ```{r}
-library(sevenbridges)
-library(readr)
+library("sevenbridges")
+library("readr")
 fd <- fileDef(name = "runif.R",
               content = read_file(fl))
 
@@ -278,7 +267,7 @@ I just describe my tool in this way, note, I use `separate=FALSE` and add `=` to
 as a hack.
 
 ```{r}
-library(readr)
+library("readr")
 fd <- fileDef(name = "runif.R",
               content = read_file(fl))
 
@@ -328,7 +317,7 @@ Rscript -e "rmarkdown::render(knitr::spin('runif_args.R', FALSE))" --args --n=10
 And so I describe my tool like this with docker image `rocker/hadleyverse` this contians knitr and rmarkdown package.
 
 ```{r}
-library(readr)
+library("readr")
 fd <- fileDef(name = "runif.R",
               content = read_file(fl))
 
@@ -396,21 +385,16 @@ cat(readLines(fl), sep = '\n')
 
 To make things more reproducible and explicit and automatic, you can do a autohook to automatically build your container/image on docker hub. Here is what I do
 
-1. I created some project called 'docker' on my github and it has all container that crated from a Dockerfile, for example, tengfei/docker/runif, please go [here](https://github.com/tengfei/docker/tree/master/runif) to check it out
+1. I created some project called 'docker' on my GitHub and it has all container that crated from a Dockerfile, for example, tengfei/docker/runif, please go [here](https://github.com/tengfei/docker/tree/master/runif) to check it out
 2. This folder root has a Dockerfile and subfolders for extra materials I added at build time, like script or report template. 
-3. login your dockerhub account, following this [tutorial](https://docs.docker.com/docker-hub/builds/) to make "automated build" from your github account. Make sure you input the right location for your Dockerfile, by customizing it. 
-4. Then you will have auto-build every time you push a new update in github. 
+3. login your dockerhub account, following this [tutorial](https://docs.docker.com/docker-hub/builds/) to make "automated build" from your GitHub account. Make sure you input the right location for your Dockerfile, by customizing it. 
+4. Then you will have auto-build every time you push a new update in GitHub. 
 5. Start using your docker image like 'tengfei/runif'
-6. Feel free to push it onto your SevenBridges platform registry as well. 
-
+6. Feel free to push it onto your Seven Bridges platform registry as well. 
 
 ## More examples
 
-There are more examples under 'inst/docker' folder, you can check out how to describe 
-command line and build docker, how to make report template. You can read the online github
-[code](https://github.com/sbg/sevenbridges-r/tree/master/inst/docker). Or you can read another tutorial about how we wrap RNA-seq workflow from
-bioconductor. 
-
-
-
-
+There are more examples under 'inst/docker' folder, you can check out how to
+describe  command line and build docker, how to make report template.
+You may read the online GitHub [code](https://github.com/sbg/sevenbridges-r/tree/master/inst/docker).
+Or you could read another tutorial about how we wrap RNA-seq workflow from bioconductor. 
