--- a/vignettes/rstudio.Rmd
+++ b/vignettes/rstudio.Rmd
@@ -1,21 +1,14 @@
 ---
-title: "IDE container: Rstudio and Shiny server and more"
+title: "IDE Container: Rstudio, Shiny Server, and More"
 output:
-  BiocStyle::html_document:
+  rmarkdown::html_vignette:
     toc: true
     toc_depth: 4
     number_sections: false
-    highlight: haddock
-    css: style.css
+vignette: >
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteIndexEntry{IDE Container: Rstudio, Shiny Server, and More}
 ---
-
-<!--
-%\VignetteIndexEntry{IDE container: Rstudio and Shiny server and more}
-%\VignettePackage{sevenbridges}
-%\VignetteEngine{knitr::rmarkdown}
--->
-
-
 
 ## Introduction
 
@@ -89,6 +82,12 @@ Sometimes it's very conventient to launch both Rstudio and Shiny server from a s
 docker run  -d -p 8787:8787 -p 3838:3838 --name rstudio_shiny_server tengfei/sevenbridges
 ```
 
+To mount file system you need to use `--privileged` with fuse.
+
+```shell
+docker run  --privileged -d -p 8787:8787 -p 3838:3838 --name rstudio_shiny_server tengfei/sevenbridges
+```
+
 check out the ip from docker machine if you are on mac os.
 
 ```bash
@@ -109,14 +108,4 @@ file.copy("/usr/local/lib/R/site-library/shiny/examples/01_hello/", "~/ShinyApps
 
 If you are login as username 'rstudio', then visit  `http://192.168.99.100:3838/rstudio/01_hello` you should be able to see the hello example.
 
-
 Note: Generic shiny app can also be hosted `http://<url>:3838/` or for particular app, `http://<url>:3838/<app_dir>` and inside the docker container, it's hosted under `/srv/shiny-server/`
-
-
-
-
-
-
-
-
-
